#
# Copyright 2009 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

if PYTHON

dist_bin_SCRIPTS = \
	FY1/gui/*.py \
	FY1/nogui/*.py \
	MN1/gui/*.py \
	MN1/nogui/*.py \
	NOAA/gui/*.py \
	NOAA/nogui/*.py

EXTRA_DIST = \
	FY1/gui/*.grc \
	FY1/nogui/*.grc \
	MN1/gui/*.grc \
	MN1/nogui/*.grc \
	NOAA/gui/*.grc \
	NOAA/nogui/*.grc

endif

